# seo-analyzer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_background_service.sh  run_web.sh
src/html/: index.html
src/html/static/: index.js
src/py/: app.py  background_service.py
